--- a/assets/css/dark.css
+++ b/assets/css/dark.css
@@ -77,3 +77,11 @@ h1, h2, h3, h4, b {
 .student-name {
 	color: #00FFC1;
 }
+
+.masonry-item p {
+  color: #ddd;
+}
+
+.pub-authors .pub-author {
+	color: #ffff
+}
