--- a/assets/css/light.css
+++ b/assets/css/light.css
@@ -26,7 +26,7 @@ h1, h2, h3, h4, b {
 }
 
 .t-secondary { 
-	color: rgb(108,117,125);
+	color: #000;
 }
 
 .link-dark {
@@ -68,4 +68,12 @@ h1, h2, h3, h4, b {
 
 .academic-block {
 	border-left: 2px #22517d solid;
+}
+
+.masonry-item p {
+  color: black;
+}
+
+.pub-authors .pub-author {
+	color: black
 }
